Add InitialCreate DB Migration script

--- a/break-away/appsettings.json
+++ b/break-away/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BreakAway;User Id=sa;Password=H@n790331;TrustServerCertificate=true;"
+  }
 }
